# qubounds

./: README.md  env.example.yaml  env.preparevega.example.yaml  env.tutorial.yaml  env.yaml  pipeline.archive.yaml  pipeline.mapie.yaml  pipeline.preparecomptox.yaml  pipeline.preparevega.yaml  pipeline.tutorial.yaml  pyproject.toml
resources/: BCF_MEYLAN.xlsx  HENRY_OPERA.xlsx  ZEBRAFISH_CORAL.xlsx  ames_challenge.csv  toxicity_against_t_pyriformis.csv  vega_models_withclasses.xlsx
src/qubounds/: mapie_class_lac.py  mapie_diagnostic.py  mapie_regression.py
src/qubounds/vega/: conformal_prepare_vega.py  property_vector.py  utils_vega.py
tasks/: conformal_classification_summary.py  conformal_regression_summary.py  interval_scaler.py  load_epacomptox.py  make_archive.py  mapie.py  mapie_apply.py  mapie_apply_plot.py  mapie_class_analysis.py  mapie_class_lac.py  mapie_class_proba.py  mapie_diagnostic.py  mapie_plot.py  mapie_plot_class.py  mapie_publication_plots.py  mapie_regression.py  mapie_regression_analysis.py  mapiec.py  vega_list_models.py
tasks/assessment/: thresholds.py  utils.py
tasks/descriptors/: ecfp.py  fp_cache.py
tasks/solr/: chemicals.py
tasks/tutorial/: __init__.py  ad_comparison.py  compare_variants.py  load_dataset.py  load_dataset_classification.py  mapie_class_external.py  mapie_classification.py  mapie_external.py  mapie_native.py
tasks/vega/: conformal_prepare_vega_new.py  utils_vega.py  vega_list_models.py
